2007-01-20  Akim Demaille  <akim.demaille@free.fr>

	vc80.pdb
	* Makefile.am (CLEANFILES): Add it.

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	modify svn:ignore to add install-sh. 

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	attempt at removing build-aux/install.sh (seems to be autogenerated) 
	* build-aux/install-sh: Remove.

2006-12-19  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* templates/makefile.bcc: here.

2006-11-28  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fixes for Win32/VC++.
	* djpeg.c: #warning is a GCC extension. Don't use it unless __GNUC__
          is defined.
	* jerror.c: Define _WIN32_WINNT before including windows.h.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Don't install man pages when the programs are not installed.
	* Makefile.am (EXTRA_MANS, man_mans): New.
	(dist_man_MANS): Define only when PROGRAMS is set.

2006-11-15  Akim Demaille  <akim.demaille@gmail.com>

	Improvements
	* Makefile.am (jconfig.h): Simplify the generation.
	* build-aux/ax-prefix-config-h.m4: Fix the CONFIG_HEADERS ->
	config_headers bug.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	No longer special case jconfig.hin
	* bootstrap: here.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	distcheck fixes
	* Makefile.am (CLEANFILES): Remove jconfig.h related files.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	More adjustments to AX_PREFIX_CONFIG_H
	* Makefile.am: Include explicit rules to create jconfig.h.
	* wrtarga.c, configure.ac, jcphuff.c, wrjpgcom.c, jinclude.h,
	* jpegint.h, rdrle.c, rdppm.c, ckconfig.c, rdtarga.c,
	* install.doc, djpeg.c, wrrle.c, rdgif.c, cdjpeg.c, cdjpeg.h,
	* rdbmp.c, wrppm.c, jidctfst.c, wrgif.c, usage.doc, wrbmp.c,
	* jmemname.c, jmemdos.c, rdjpgcom.c, cderror.h, jpegtran.c,
	* templates/jconfig.vms, templates/jconfig.st,
	* templates/jconfig.bcc, templates/jconfig.dj,
	* templates/jconfig.mac, templates/jconfig.manx,