@@ -1,3 +1,8 @@
+2007-02-02  Akim Demaille  <akim@lrde.epita.fr>
+
+	Clean files.
+	* Makefile.am: Get rid of manipest files.
+
 2007-01-20  Akim Demaille  <akim.demaille@free.fr>
 
 	vc80.pdb
